@@ -72,6 +72,7 @@ export(minibar)
 export(padding)
 export(ph_with_flextable)
 export(ph_with_flextable_at)
+export(phantomjs_exists)
 export(proc_freq)
 export(qflextable)
 export(regulartable)
