@@ -1,0 +1,11 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\name{phantomjs_exists}
+\alias{phantomjs_exists}
+\title{test if phantomjs exists}
+\usage{
+phantomjs_exists()
+}
+\description{
+test if phantomjs exists on the machine.
+}
